Interactive-Dashboard/app.error
2026-02-11 08:22:46.236 Session with id 7a279eff-0a93-4bef-bd0a-9099ebc8e70b is already connected! Connecting to a new session.
2026-02-13 11:37:27.154 Session with id da0fd808-73f6-4dd4-8797-dab97f7726f1 is already connected! Connecting to a new session.
2026-02-19 13:38:20.876 Session with id 45ac1702-720a-4202-831a-49d4d1d68e09 is already connected! Connecting to a new session.
2026-02-20 09:08:34.918 Session with id 62cff7df-7c02-469e-9646-4566d0f234e2 is already connected! Connecting to a new session.
2026-02-20 12:26:02.307 Script compilation error
Traceback (most recent call last):
  File "/home/tajak/miniconda3/envs/interactive_dash/lib/python3.13/site-packages/streamlit/runtime/scriptrunner/script_runner.py", line 573, in _run_script
    code = self._script_cache.get_bytecode(script_path)
  File "/home/tajak/miniconda3/envs/interactive_dash/lib/python3.13/site-packages/streamlit/runtime/scriptrunner/script_cache.py", line 72, in get_bytecode
    filebody = magic.add_magic(filebody, script_path)
  File "/home/tajak/miniconda3/envs/interactive_dash/lib/python3.13/site-packages/streamlit/runtime/scriptrunner/magic.py", line 45, in add_magic
    tree = ast.parse(code, script_path, "exec")
  File "/home/tajak/miniconda3/envs/interactive_dash/lib/python3.13/ast.py", line 50, in parse
    return compile(source, filename, mode, flags,
                   _feature_version=feature_version, optimize=optimize)
  File "/home/tajak/Benchmarking-Text-Classification-on-South-Slavic/Interactive-Dashboard/app.py", line 514
    'Mistral Medium 3.1 - mistral-medium-2508', 'Gemini 2.5 Flash', 'Claude Haiku 4.5', 'Gemini 2.5 Pro', 'GaMS-27B-Instruct', 'Gemini 3 Flash Preview', 'X-GENRE classifier', , 'IPTC XLM-R classifier', 'LLaMA 4 Scout', 'ParlaCAP-classifier', 'Mistral Small 3.2', 'XLM-R-ParlaSent'
                                                                                                                                                                               ^
SyntaxError: invalid syntax
2026-02-20 12:26:02.309 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.
